# youtube-downloader-skill

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/skills/youtube-downloader/: SKILL.md
.claude/skills/youtube-downloader/references/: CHECKLIST.md  EXAMPLES.md  INSTALL.md  TROUBLESHOOTING.md
.claude/skills/youtube-downloader/scripts/: download_video.py
.github/workflows/: package-skill.yml
scripts/: install-deps-windows.ps1  package-skill.ps1  package-skill.sh
src/youtube_downloader_skill/: __init__.py  cli.py  config.py  downloader.py  errors.py
tests/: test_cli.py  test_config.py  test_integration_download.py
