[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-downloader-skill"
version = "0.1.0"
description = "CLI YouTube downloader skill for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Youtube Downloader Skill" }]
dependencies = [
    "yt-dlp>=2026.3.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
youtube-downloader-skill = "youtube_downloader_skill.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "integration: marks tests that need network and may be slow",
]
